Overflow fix

--- a/src/Components/AccountModals/accountmodal.scss
+++ b/src/Components/AccountModals/accountmodal.scss
@@ -8,7 +8,7 @@
     }
     h5 {
       font-weight: 400;
-      font-size: 36px;
+      font-size: 31px;
       line-height: 1.2;
       font-family: 'Nib Pro SemiBold';
 
@@ -16,7 +16,7 @@
       @media (max-width: 500px) {
         font-size: 30px;
       }
-      @media (max-width: 410px) {
+      @media (max-width: 450px) {
         font-size: 24px;
       }
     }
